# RustMath

./: .gitignore  Cargo.toml  LICENSE  MCP_FIXES.md  README.md  test_mcp_output
.github/workflows/: ci.yml
benches/: tool_execution.rs
scripts/: clear_claude_cache.sh
src/: config.rs  error.rs  lib.rs  main.rs  service.rs
src/protocol/: constants.rs  mod.rs  parser.rs
src/tools/: advanced.rs  algebra.rs  basic_math.rs  batch.rs  combinatorics.rs  equations.rs  finance.rs  geometry.rs  mod.rs  registry.rs  statistics.rs  traits.rs  trigonometry.rs
src/utils/: args.rs  limits.rs  mod.rs  rate_limiter.rs  validation.rs
tests/: claude_desktop_integration_test.rs  integration_test.rs  manual_mcp_test.rs  mcp_protocol_test.rs  property_test.rs
