[package]
name = "rust-math-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Nora Holmes"]
license = "MIT"
description = "A Model Context Protocol (MCP) server for mathematical operations"
repository = "https://github.com/justnorawr/RustMath"

[lib]
name = "rust_math_mcp"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
once_cell = "1.19"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tool_execution"
harness = false

